[gd_scene load_steps=2 format=3 uid="uid://cw8jhirn1edur"]

[ext_resource type="Script" uid="uid://28v78kclwft5" path="res://Scenes/Skills/Cooking/CookingScripts/CookingController.gd" id="1_a28kv"]

[node name="CookingController" type="Node"]
script = ExtResource("1_a28kv")

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[node name="FlipWindowTimer" type="Timer" parent="."]
one_shot = true
